  * Makefile.nx-libs: Don't allow symlinks to point into buildroot.
  * Makefile.nx-libs: Install man pages via main Makefile.
  * Add Description: and Author: fields to various patch headers.
  * Makefile.nx-libs: Run make install for nxproxy first, then create the
    wrapper script.
  * Make install-lite rule in Makefile.nx-libs more predictable and not
    rely on nxproxy/Makefile.in.

  * NX code reduction efforts (from 93Mb to 41Mb):
    - Drop more unused code in nx-X11/programs/Xserver/hw/. Do this in
      roll-tarball.sh and in debian/rules alike.
    - Stop shipping unused / very old xterm code.
    - Drop nx-X11/programs/Xserver/hw/xfree86 except of four files symlinked
      to other locations in the source tree at build time.
    - More source tree size reduction by analyzing what exactly of the Mesa
      source code in nx-X11/extras/ is used and what not.
    - Drop more unused folders from tarball release / before .deb package build:
      .  nx-X11/programs/Xserver/miext/shadow/
      .  nx-X11/programs/Xserver/XpConfig/
      .  nx-X11/programs/Xserver/Xprint/
    - Makefile.nx-libs: Don't install Mesa header files into DESTDIR anymore.
    - Unify source tree reduction (debian/rules vs. roll-tarball.sh) via file/
      folder lists in text files named debian/CODE-REDUCTION_*.
    - Update 991_fix-hr-typos.full.patch. Don't patch files that get removed by
      the NX code reduction effort.
    - Drop 604_nx-X11_recent-freetype-API.full.patch. Not used in current build
      process.
    - Update 600_nx-X11+nxcompext+nxcompshad_unique-libnames.full.patch. Don't
      patch files matter to the NX code reduction efforts.
    - Update 031_nx-X11_parallel-make.full.patch. Don't patch .original files in
      NX code tree.
    - Drop patches: 017_nx-X11_update-autotools-helper-files.full.patch,
      018_nx-X11_update-libtool-ltmain-script.full.patch,
      019_nx-X11_expat-build-against-system-libxmltok.full.patch. They patch files